define contexts explicit

--- a/modules/mod_napappgui.json
+++ b/modules/mod_napappgui.json
@@ -5,7 +5,11 @@
     "rendering",
     "gui"
   ],
-  "context": "source",
+  "contexts":
+  {
+    "source": true,
+    "package": true
+  },
   "platforms":
   [
     "windows",
