updating download links

--- a/modules/napappgui.json
+++ b/modules/napappgui.json
@@ -23,5 +23,5 @@
   },
   "description": "GUI layout system for NAP applications",
   "link": "https://github.com/napframework",
-  "visible": true
+  "visible": false
 }
